# im-gui

./: CMakeLists.txt  README.md  notes.md
file_explorer/: CMakeLists.txt
file_explorer/include/: render.hpp
file_explorer/src/: main.cpp  render.cpp
hello_world/: .gitignore
hello_world/scripts/: cc_args.py
hello_world/src/: main.cpp
include/: main.hpp
src/: main.cpp
